--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="robots" content="index, follow">
-<title>R M Hunt Fine Art Landscape Oil Paintings</title>
+<title>About R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta name="author" content="R M Hunt Fine Art Paintings">
 <meta name="description" content="Realist Fine Art Landscape Seascape Oil Paintings of America, South America and Europe ">
 <meta name="keywords" content="fine art, oil, paintings, landscapes, seascapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
