--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
   <font color="#fff"><p id="one" style="font-size:24px"><i>Where the spirit does not work with the hand, there is no art.</i> <br>~ Leonardo da Vinci</p></font>
   <div>
   <center>
-  <font color="#ccc"><p id="one" style="margin-left:10%; margin-right:10%; text-align:justify;">Years ago I was deeply involved with large format landscape photography. Traveling and hiking through some of the most beautiful parts of America. As the years passed, life took many different paths and my passion eventually progressed to painting. I've always had a love for early European and American landscape artist. Claude Lorrain, Sanford Gifford, Worthington Whittredge, Christoffer Eckersberg, JMW Turner, Frederic Church and many others. Studying these masters was the learning path that was both exciting and challenging. Here are selected works from some of my favorite large format images painted in the spirit of my heroes in art. </font></p>
+  <font color="#ccc"><p id="one" style="margin-left:10%; margin-right:10%; text-align:justify;">Years ago I was deeply involved with large format landscape photography. Traveling and hiking through some of the most beautiful parts of America. As the years passed, life took many different paths and my passion eventually progressed to painting. I've always had a love for early European and American landscape artist. Claude Lorrain, Sanford Gifford, Worthington Whittredge, Christoffer Eckersberg, JMW Turner, Frederic Church and many others. Studying these masters, learning their techniques, was both exciting and challenging. Here are selected works from some of my favorite large format images painted in the spirit of my heroes in art. </font></p>
   </div>
   &ensp;
     <hr class="line1">
