--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 </script>-->
 <script data-goatcounter="https://rmhunt.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
+	
+		<script async src="https://scripts.withcabin.com/hello.js"></script>
 </center>	
  </body>
 </html>
