--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
             e.preventDefault();
         }, false);
 </script>-->
-<script data-goatcounter="https://rmhunt.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+<script async id="checkScript" src="https://checkstat.me/check.js" data-id="1173"></script>
 	
 		<script async src="https://scripts.withcabin.com/hello.js"></script>
 </center>	
