--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="robots" content="index, follow">
 <title>R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta name="author" content="R M Hunt Fine Art Paintings">
@@ -30,7 +30,7 @@
   <font color="#fff"><center>R  M Hunt Fine Art</center></font>
   <hr class="line1">
   <font color="#fff"><p style="font-size:24px">Selected Works</p></font>
-  <div class="swiffy-slider slider-nav-chevron slider-indicators-square slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein slider-nav-mousedrag">
+  <div class="swiffy-slider slider-nav-chevron slider-indicators-square slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
     <p><ul class="slider-container">
         <li style="font-size:24px"><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/><br><font color="#fff"><p>Lands End | Big Sur California</p></font></li>
         <li style="font-size:24px"><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="842" height="479"/><br><font color="#fff"><p>Sunrise At Arches National Park</p></font></li>
@@ -46,8 +46,8 @@
         <button class="active"></button>
         <button></button>
         <button></button>
-	    <button></button>
-		<button></button>
+	<button></button>
+	<button></button>
 	
     </div>
 </div>
@@ -60,8 +60,7 @@
         }, false);
 </script>-->
 <script async id="checkScript" src="https://checkstat.me/check.js" data-id="1173"></script>
+<script async src="https://scripts.withcabin.com/hello.js"></script>
 	
-		<script async src="https://scripts.withcabin.com/hello.js"></script>
-</center>	
- </body>
+</body>
 </html>
