--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="robots" content="index, follow">
 <title>About R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta name="author" content="R M Hunt Fine Art Paintings">
@@ -49,8 +49,8 @@
             e.preventDefault();
         }, false);
 </script>-->
-<script data-goatcounter="https://rmhunt.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+<script async id="checkScript" src="https://checkstat.me/check.js" data-id="1173"></script>
+<script async src="https://scripts.withcabin.com/hello.js"></script>
 </center>	
  </body>
 </html>
