--- a/gallery.html
+++ b/gallery.html
@@ -199,9 +199,9 @@ img {
         <li class="gallery__item">
             <figure>
                 <div class="gallery__image">
-                    <img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" alt="image" title="image">
+                    <img src="https://roberthunt.com/images/le1.jpg" alt="Lands End Big Sur California Oil Painting" alt="image" title="image">
                     <div class="gallery__btns">
-                        <a href="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479" data-fancybox="gallery" data-caption="Caption for single image 1">Lands End Big Sur California</a>
+                        <a href="https://roberthunt.com/images/le1.jpg" alt="Lands End Big Sur California Oil Painting"  data-fancybox="gallery" data-caption="Caption for single image 1">Lands End Big Sur California</a>
                         
                     </div>
                 </div>
