--- a/gallery.html
+++ b/gallery.html
@@ -237,7 +237,7 @@ img {
                 <div class="gallery__image">
                     <img src="https://roberthunt.com/images/sea_t.jpg" alt="image" title="image">
                     <div class="gallery__btns">
-                        <a href="https://roberthunt.com/images/sea.jpg" data-fancybox="gallery" data-caption="Caption for single image 4">view gallery</a>
+                        <a href="https://roberthunt.com/images/sea.jpg" data-fancybox="gallery" data-caption="Caption for single image 4">Morning in Ricon del Mar</a>
                         
                     </div>
                 </div>
@@ -247,9 +247,9 @@ img {
         <li class="gallery__item">
             <figure>
                 <div class="gallery__image">
-                    <img src="https://roberthunt.com/images/pawnee.jpg" alt="image" title="image">
+                    <img src="https://roberthunt.com/images/pawnee_t.jpg" alt="image" title="image">
                     <div class="gallery__btns">
-                        <a href="https://roberthunt.com/images/pawnee.jpg" data-fancybox="gallery" data-caption="Caption for single image 5">view gallery</a>
+                        <a href="https://roberthunt.com/images/pawnee.jpg" data-fancybox="gallery" data-caption="Caption for single image 5">Pawnee Buttes<br>Colorado</a>
                         
                     </div>
                 </div>
