--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta name="author" content="R M Hunt Fine Art Paintings">
 <meta name="description" content="Realist Fine Art Landscape Seascape Oil Paintings of America, South America and Europe ">
