--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="index, follow">
@@ -17,7 +17,7 @@
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
-    background-color: rgb( 27, 38, 49 ); !important;
+    background-color: rgb(250, 240, 230); !important;
     
 	}
 	hr.line1 {
@@ -25,32 +25,48 @@
   }
   #one{
     font-family: 'roboto';
-    color: #555;
+    color: #000;
+    font-size: 22px;
+  }
+  
+  #two{
+    font-family: 'roboto';
+    color: #000;
     font-size: 22px;
   }
    div {
 	text-align: left;
     margin: 0 auto;
+h1 {
+  display: block;
+  font-size: 1em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: normal;
+}
 </style>
 </head>
 <body><center>&ensp;
-  <font color="#fff"><p class="p2" style="font-size:36px"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com">R  M Hunt Fine Art</a></p></font>
+  <font color="#000"><p class="p2" style="font-size:36px"><a style="text-decoration: none; color: #000;" href="https://roberthunt.com">R  M Hunt Fine Art</a></p></font>
   <hr class="line1">
-  <font color="#fff"><p id="one" style="font-size:24px"><i>Where the spirit does not work with the hand, there is no art.</i> <br>~ Leonardo da Vinci</p></font>
+  <font color="#000"><p id="two" style="margin-left:30%; margin-right:30%; text-align:justify;"><i>"Where the spirit does not work with the hand, there is no art.
+"</i> ~ Leonardo da Vinci.</p></font>
   <div>
   <center>
-  <font color="#ccc"><p id="one" style="margin-left:10%; margin-right:10%; text-align:justify;">Years ago I was deeply involved with large format landscape photography. Traveling and hiking through some of the most beautiful parts of America. As the years passed, life took many different paths and my passion eventually progressed to painting. I've always had a love for early European and American landscape artist. Claude Lorrain, Sanford Gifford, Worthington Whittredge, Christoffer Eckersberg, JMW Turner, Frederic Church and many others. Here are selected works from some of my favorite large format images painted in the spirit of my heroes in art. </font></p>
+  <h1><font color="#000"><p id="one" style="margin-left:10%; margin-right:10%; text-align:justify;">Years ago I was deeply involved with large format landscape photography. Traveling and hiking through some of the most beautiful parts of America. As the years passed, life took many different paths and my passion eventually progressed to painting. I've always had a love for early European and American landscape artist. Claude Lorrain, Sanford Gifford, Worthington Whittredge, Christoffer Eckersberg, JMW Turner, Frederic Church and many others. Here are selected works from some of my favorite images painted in the spirit of my heroes in art. </font></p></h1>
   </div>
   &ensp;
     <hr class="line1">
-    <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html" target="_blank">For More Information Or Feedback</a></font><br>&copy; 2025 R M Hunt Fine Art</p></font>
+    <font color="#000"><p style="font-size:20px"><font color="#000"><a style="text-decoration: none; color: #000;" href="https://roberthunt.com/info.html" target="_blank">For More Information Or Feedback</a></font><br>&copy; 2025 R M Hunt Fine Art</p></font>
 <!--<script>
     document.addEventListener("contextmenu", function(e){
             e.preventDefault();
         }, false);
 </script>-->
-<script async id="checkScript" src="https://checkstat.me/check.js" data-id="1173"></script>
-<script async src="https://scripts.withcabin.com/hello.js"></script>
+<!--<script async id="checkScript" src="https://checkstat.me/check.js" data-id="1173"></script>
+<script async src="https://scripts.withcabin.com/hello.js"></script>-->
 	
  </body>
 </html>
