--- a/info.html
+++ b/info.html
@@ -13,7 +13,7 @@
 <link rel="manifest" href="ico/site.webmanifest">
 <style>
   body { 
-  background-color: rgb( 27, 38, 49 ) !important; 
+  background-color: rgb(250, 240, 230) !important; 
   
   }
 form { max-width:420px; margin:50px auto; }
@@ -77,9 +77,9 @@ hr.line1 {
 
 <!------ Include the above in your HEAD tag ---------->
 <body><center>&ensp;
-  <font color="#fff"><p class="p2" style="font-size:36px"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com">R  M Hunt Fine Art</a></p></font>
+  <font color="#000"><p class="p2" style="font-size:36px"><a style="text-decoration: none; color: #000;" href="https://roberthunt.com">R  M Hunt Fine Art</a></p></font>
   <hr class="line1">
-  <font color="#fff"><p class="p2" style="font-size:26px">Inquiries</p></font><br>
+  <font color="#000"><p class="p2" style="font-size:26px">Inquiries</p></font><br>
   
 
 
@@ -93,10 +93,9 @@ hr.line1 {
   <input type="submit" value="SUBMIT"/>
 </form><br>
 
-<font color="#fff"><p class="p2" style="font-size:26px">Or Send An Email To: <br><a style="text-decoration: none; color: #fff;" href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p></font>
+<font color="#000"><p class="p2" style="font-size:26px">Or Send An Email To: <br><a style="text-decoration: none; color: #000;" href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p></font>
 
-<script async id="checkScript" src="https://checkstat.me/check.js" data-id="1173"></script>
-<script async src="https://scripts.withcabin.com/hello.js"></script>
-</center>
-</body>
+
+</div>
+</body></center>
 </html>
