--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="index, follow">
@@ -21,7 +21,7 @@
     
 	}
 	hr.line1 {
-  border-top: 1px solid white; width:20%;
+  border-top: 1px solid black; width:20%;
   }
   #one{
     font-family: 'roboto';
@@ -33,6 +33,7 @@
     font-family: 'roboto';
     color: #000;
     font-size: 22px;
+	text-align: center;
   }
    div {
 	text-align: left;
@@ -48,10 +49,10 @@ h1 {
 }
 </style>
 </head>
-<body><center>&ensp;
+<body><center>
   <font color="#000"><p class="p2" style="font-size:36px"><a style="text-decoration: none; color: #000;" href="https://roberthunt.com">R  M Hunt Fine Art</a></p></font>
   <hr class="line1">
-  <font color="#000"><p id="two" style="margin-left:30%; margin-right:30%; text-align:justify;"><i>"Where the spirit does not work with the hand, there is no art.
+  <font color="#000"><p id="two"><i>"Where the spirit does not work with the hand, there is no art.
 "</i> ~ Leonardo da Vinci.</p></font>
   <div>
   <center>
