--- a/info.html
+++ b/info.html
@@ -64,7 +64,7 @@ textarea {
   font-family: Cormorant SC;
   }
 hr.line1 {
-  border-top: 1px solid white; width:20%;
+  border-top: 1px solid black; width:20%;
   }
 </style>
     <meta charset="UTF-8" />
