--- a/info.html
+++ b/info.html
@@ -3,6 +3,7 @@
 <title>Contact R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta charset="UTF-8" />
 <meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="R M Hunt">
 <meta name="description" content="Realist Fine Art Landscape Oil Paintings of America, South America and Europe ">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
