--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ span { font-size: 16px; }
                 <div class="gallery__image">
                     <img src="https://roberthunt.com/images/gp_t.jpg" alt="image" title="image">
                     <div class="gallery__btns">
-                        <a href="https://roberthunt.com/images/gp.jpg" data-fancybox="gallery" data-caption="Caption for single image 5">Storm at Dawn<br> Yosemite Valley<br></a>
+                        <a href="https://roberthunt.com/images/gp.jpg" data-fancybox="gallery" data-caption="Caption for single image 5">Evening at <br> Glacier Point<br></a>
                         
                     </div>
                 </div>
