--- a/index-4_v1.html
+++ b/index-4_v1.html
@@ -148,7 +148,7 @@
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details.html"><h5 class="mb-5">Lands End</h4></a>
+                                <a href="portfolio-details-le.html"><h5 class="mb-5">Lands End</h4></a>
                                 <p>Big Sur, California</p>
                                 <!--<hr class="line" />-->
                             </div>
