--- a/portfolio-details-le.html
+++ b/portfolio-details-le.html
@@ -258,8 +258,8 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
-						<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/details/le670.jpg" alt="MiniPo">
-							<img src="assets/img/portfolio/details/le670.jpg" alt="MiniPo" />
+						<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/le670.jpg" alt="Lands End">
+							<img src="https://roberthunt.com/images/le670.jpg" alt="Lands End" />
 						</a>
 					</div>
 					
