--- a/index-4_v1.html
+++ b/index-4_v1.html
@@ -42,7 +42,7 @@
     <header class="header-four">
         <div class="top-logo text-center">
             <div class="logo">
-                <a href="index.html"><img src="https://roberthunt.com/images/logo1.png" alt="R M Hunt Fine Art" />
+                <a href="index.html"><img src="https://roberthunt.com/images/logo1.png" alt="R M Hunt Fine Art" /><br>
 				
                 </a>
 				
