--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -230,18 +230,18 @@
                     <div class="portfolio-grid fitRows-grid hover-1">
                         <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="https://roberthunt.com/images/le370250.jpg" alt="MiniPo" />
-                                <div class="zoom-icon">
+                                <img src="https://roberthunt.com/images/le370250.jpg" alt="Lands End" />
+                                <div>
                                     <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/1.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>-->
                                     </a>
                                     <a href="portfolio-details-le.html">
-                                        <i class="zmdi zmdi-link"></i>
+                                        <!--<i class="zmdi zmdi-link"></i>-->
                                     </a>
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details.html"><h5 class="mb-5">Lands End</h4></a>
+                                <a href="portfolio-details-le.html"><h5 class="mb-5">Lands End</h4></a>
                                 <p>Big Sur California</p>
 								<hr class="line"/>
                             </div>
