--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -55,11 +55,11 @@
 						<div class="right">
 							<nav class="mainmenu menu-hover-1 pull-right">
 								<div class="navbar-header">
-									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+									<!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
-									</button>
+									</button>-->
 								</div>
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
