--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -54,13 +54,13 @@
 					<div class="col-xs-12 col-sm-10 col-md-9">
 						<div class="right">
 							<nav class="mainmenu menu-hover-1 pull-right">
-								<!--<div class="navbar-header">
+								<div class="navbar-header">
 									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
+										<!--<span class="icon-bar"></span>
+										<span class="icon-bar"></span>-->
 									</button>
-								</div>-->
+								</div>
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
