--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -57,14 +57,14 @@
 								<div class="navbar-header">
 									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 										<span class="icon-bar"></span>
-										<!--<span class="icon-bar"></span>
-										<span class="icon-bar"></span>-->
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
 									</button>
 								</div>
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li class="dropdown"><a href="index.html">Home</a>
+                                        <li><a href="index.html">Home</a>
                                             <!--<ul>
                                                 <li><a href="index.html">Home One</a>
                                                 </li>
