--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -46,7 +46,7 @@
 					<div class="col-xs-12 col-sm-2 col-md-3">
 						<div class="left">
 							<div class="logo">
-								<a href="index.html"><img src="assets/img/rmh.png" alt="MiniPo" />
+								<a href="index.html"><img src="assets/img/rmh_logo.png" alt="MiniPo" />
 								</a>
 							</div>
 						</div>
@@ -82,7 +82,8 @@
 						</div>
 					</div>
 				</div>
-			
+			</div>
+		</div>
     </header>
 	<!-- Header Space -->
 	<div class="header-space"></div>
