--- a/portfolio-details-le.html
+++ b/portfolio-details-le.html
@@ -46,7 +46,7 @@
 					<div class="col-xs-12 col-sm-2 col-md-3">
 						<div class="left">
 							<div class="logo">
-								<a href="index.html"><img src="https://roberthunt.com/images/rmh_logo.png" alt="R M Hunt" />
+								<a href="index.html"><img src="https://roberthunt.com/images/rmh_logo.png" alt="R M Hunt Fine Art" />
 								</a>
 							</div>
 						</div>
