--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -131,8 +131,8 @@
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details-le.html"><h5 class="mb-5">Lands End</h4></a>
-                                <p>Big Sur California</p>
+                                <a href="portfolio-details-le.html"><h3 class="mb-5">Lands End</h3></a>
+                                <h5>Big Sur California</h5>
 								<hr class="line"/>
                             </div>
                         </div>
@@ -149,8 +149,8 @@
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details.html"><h5 class="mb-5">Morning At Arches National Park</h4></a>
-                                <p>Moab, Utah</p>
+                                <a href="portfolio-details.html"><h3 class="mb-5">Morning At Arches National Park</h3></a>
+                                <h5>Moab, Utah</h5>
 								<hr class="line"/>
                             </div>
                         </div>
