--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -139,17 +139,17 @@
                         <div class="grid-item web print new percent-33">
                             <div class="single-portfolio overlay">
                                 <img src="https://roberthunt.com/images/arch370250.jpg" alt="MiniPo" />
-                                <div class="zoom-icon">
+                                <div>
                                     <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/2.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>-->
                                     </a>
                                     <a href="portfolio-details.html">
-                                        <i class="zmdi zmdi-link"></i>
+                                        <!--<i class="zmdi zmdi-link"></i>-->
                                     </a>
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details.html"><h3 class="mb-5">Morning At Arches National Park</h3></a>
+                                <a href="portfolio-details.html"><h3 class="mb-5">Morning At Courthouse Towers</h3></a>
                                 <h5>Moab, Utah</h5>
 								<hr class="line"/>
                             </div>
