--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!-- style css -->
-    <link rel="stylesheet" href="style.css">
+    
     <!-- modernizr js -->
     <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
 
@@ -74,7 +74,7 @@ textarea {
 [type="submit"]:hover { background:#CC4949; }
 
 .p2 {
-  font-family: Cormorant SC; !important;
+  font-family: Cormorant SC;
   }
 hr.line1 {
   border-top: 1px solid black; width:20%;
@@ -90,9 +90,9 @@ hr.line1 {
 
 <!------ Include the above in your HEAD tag ---------->
 <body><center>&ensp;
-  <p class="p2" style="font-size:26px"><a style="text-decoration: none;" href="https://roberthunt.com">R  M Hunt Fine Art</a></p>
+  <font color="#000"><p class="p2" style="font-size:36px"><a style="text-decoration: none; color: #000;" href="https://roberthunt.com">R  M Hunt Fine Art</a></p></font>
   <hr class="line1">
- <p class="p2" style="font-size:26px">Inquiries</p><br>
+  <font color="#000"><p class="p2" style="font-size:26px">Inquiries</p></font><br>
   
 
 
@@ -106,7 +106,7 @@ hr.line1 {
   <input type="submit" value="SUBMIT"/>
 </form><br>
 
-<p class="p2" style="font-size:26px">Or Send An Email To: <br><a style="text-decoration: none;" href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p></font>
+<font color="#000"><p class="p2" style="font-size:26px">Or Send An Email To: <br><a style="text-decoration: none; color: #000;" href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p></font>
 
 
 </div>
