--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!-- style css -->
-    
+    <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
     <!-- modernizr js -->
     <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
 
@@ -27,7 +27,7 @@
 <style>
   body { 
   background-color: rgb(255, 255, 255) !important; 
-  
+  font-family: Cormorant SC;
   }
 form { max-width:420px; margin:50px auto; }
 
