--- a/lands_end2.html
+++ b/lands_end2.html
@@ -246,19 +246,19 @@
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
 						<h3>Lands End | Big Sur, California</h3>
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have fered alteration in some form, by injmour, or randomised words which don't look even slightlievable. Iyoare going to use a passage of Lorem Ipsum, you need to be surthere isn't anything embarrassing hidden.</p>
+						<p>Located on the central coast of California. The Spanish referred to the coastal region to the south of Monterey as <i>el país grande del sur</i>, meaning <i>'the big country of the south'</i>. This was often shortened to el sur grande <i>'the big south'</i>.</p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Acrylic On Wood Panel</p></li>
 							<li><span>Created:</span> <p>1996</p></li>
 							<li><span>Size :</span> <p>25cm x 40cm</p></li>
-							<li class="share"><span>Share :</span> 
+							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
 									<ul class="clearfix">
 										<li><a target="_blank" href="https://www.facebook.com/sharer.php?u=https://roberthunt.com"><i class="zmdi zmdi-facebook"></i></a></li>
-										<li><a target="_blank" href="http://www.twitter.com"><i class="zmdi zmdi-twitter"></i></a></li>
-										<li><a target="_blank" href="http://www.pinterest.com"><i class="zmdi zmdi-pinterest"></i></a></li>
-										<li><a target="_blank" href="http://www.linkedin.com"><i class="zmdi zmdi-linkedin"></i></a></li>
-										<li><a target="_blank" href="http://www.instagram.com"><i class="zmdi zmdi-instagram"></i></a></li>
+										<li><a target="_blank" href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings"><i class="zmdi zmdi-twitter"></i></a></li>
+										<li><a target="_blank" href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com"><i class="zmdi zmdi-pinterest"></i></a></li>
+										<li><a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com"><i class="zmdi zmdi-linkedin"></i></a></li>
+										<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
 									</ul>
 								</div>
 							</li>
