--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -123,17 +123,17 @@
                                 <img src="https://roberthunt.com/images/le370250.jpg" alt="Lands End" />
                                 <div>
                                     <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/1.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>-->
-                                    </a>
-                                    <a href="https://roberthunt.com/lands_end2.html">
-                                        <!--<i class="zmdi zmdi-link"></i>-->
-                                    </a>
+                                        <i class="zmdi zmdi-fullscreen"></i>
+                                    </a>-->
+                                    <!--<a href="https://roberthunt.com/lands_end2.html">
+                                        <i class="zmdi zmdi-link"></i>
+                                    </a>-->
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="https://roberthunt.com/lands_end2.html"><h3 class="mb-5">Lands End</h3></a>
-                                <!--<h5></h5>-->
-								<!--<hr class="line"/>-->
+                                <a href="https://roberthunt.com/lands_end2.html"><i class="zmdi zmdi-link"></i><h3 class="mb-5">Lands End </h3></a>
+                                <h5></h5>
+								<hr class="line"/>
                             </div>
                         </div>
                         <div class="grid-item web print new percent-33">
@@ -144,7 +144,7 @@
                                         <i class="zmdi zmdi-fullscreen"></i>-->
                                     </a>
                                     <a href="portfolio-details.html">
-                                        <!--<i class="zmdi zmdi-link"></i>-->
+                                        <i class="zmdi zmdi-link"></i>
                                     </a>
                                 </div>
                             </div>
