--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -121,17 +121,17 @@
                         <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
                                 <img src="https://roberthunt.com/images/le370250.jpg" alt="Lands End" />
-                                <div>
+                                <!--<div>
                                     <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/1.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>
                                     </a>-->
                                     <!--<a href="https://roberthunt.com/lands_end2.html">
                                         <i class="zmdi zmdi-link"></i>
-                                    </a>-->
-                                </div>
+                                    </a>
+                                </div>-->
                             </div>
                             <div class="project-title">
-                                <a href="https://roberthunt.com/lands_end2.html"><i class="zmdi zmdi-link"></i><h3 class="mb-5">Lands End </h3></a>
+                                <a href="https://roberthunt.com/lands_end2.html">Lands End </a>&ensp;<i class="zmdi zmdi-link"></i>
                                 <h5></h5>
 								<hr class="line"/>
                             </div>
@@ -141,17 +141,18 @@
                                 <img src="https://roberthunt.com/images/arch370250.jpg" alt="Courthouse Towers" />
                                 <div>
                                     <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/2.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>-->
+                                        <i class="zmdi zmdi-fullscreen"></i>
                                     </a>
                                     <a href="portfolio-details.html">
                                         <i class="zmdi zmdi-link"></i>
-                                    </a>
+                                    </a>-->
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details.html"><h3 class="mb-5">Morning At Courthouse Towers</h3></a>
-                                <!--<h5></h5>-->
-								<!--<hr class="line"/>-->
+							
+                                <a href="portfolio-details.html">Morning At Courthouse Towers</a>&ensp;<i class="zmdi zmdi-link"></i>
+                                <h5></h5>
+								<hr class="line"/>
                             </div>
                         </div>
                         <div class="grid-item work3d design new percent-33">
