--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -138,7 +138,7 @@
                         </div>
                         <div class="grid-item web print new percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="https://roberthunt.com/images/arch370250.jpg" alt="Courthouse Towers" />
+                                <img src="https://roberthunt.com/images/arches370250.jpg" alt="Courthouse Towers" />
                                 <div>
                                     <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/2.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>
@@ -150,7 +150,7 @@
                             </div>
                             <div class="project-title">
 							
-                                <a href="portfolio-details.html">Morning At Courthouse Towers</a>&ensp;<i class="zmdi zmdi-link"></i>
+                                <a href="courthouse-towers.html">Dawn At Courthouse Towers</a>&ensp;<i class="zmdi zmdi-link"></i>
                                 <h5></h5>
 								<hr class="line"/>
                             </div>
