--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -131,7 +131,7 @@
                                 </div>-->
                             </div>
                             <div class="project-title">
-                                <a href="https://roberthunt.com/lands_end2.html">Lands End </a>&ensp;<i class="zmdi zmdi-link"></i>
+                                <a href="https://roberthunt.com/lands_end2.html"><h5 class="mb-5">Lands End </h4></a>&ensp;<i class="zmdi zmdi-link"></i>
                                 <h5></h5>
 								<hr class="line"/>
                             </div>
@@ -150,26 +150,26 @@
                             </div>
                             <div class="project-title">
 							
-                                <a href="courthouse-towers.html">Dawn At Courthouse Towers</a>&ensp;<i class="zmdi zmdi-link"></i>
+                                <a href="courthouse-towers.html"><h5 class="mb-5">Dawn At Courthouse Towers</h4></a>&ensp;<i class="zmdi zmdi-link"></i>
                                 <h5></h5>
 								<hr class="line"/>
                             </div>
                         </div>
                         <div class="grid-item work3d design new percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="https://roberthunt.com/images/le370250.jpg" alt="MiniPo" />
-                                <div class="zoom-icon">
+                                <img src="https://roberthunt.com/images/robbins370250.jpg" alt="Robbins Creek" />
+                                <div>
                                     <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/3.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>-->
+                                        <i class="zmdi zmdi-fullscreen"></i>
                                     </a>
-                                    <a href="portfolio-details.html">
+                                    <a href="https://roberthunt.com/robbins.html">
                                         <i class="zmdi zmdi-link"></i>
-                                    </a>
+                                    </a>-->
                                 </div>
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details.html"><h5 class="mb-5">Portfolio Item Title</h4></a>
-                                <p>Print, Branding</p>
+                                <a href="https://roberthunt.com/robbins.html"><h5 class="mb-5">Robbins Creek</h4></a>&ensp;<i class="zmdi zmdi-link"></i>
+                                <p></p>
 								<hr class="line"/>
                             </div>
                         </div>
