--- a/courthouse-towers.html
+++ b/courthouse-towers.html
@@ -64,7 +64,7 @@
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li class="dropdown"><a href="index.html">Home</a>
+                                        <li><a href="index.html">Home</a>
                                             
                                         </li>
                                         <!-- HOME END -->
@@ -87,7 +87,7 @@
 	<div class="header-space"></div>
     <!-- Header Section End -->
 	<!-- Breadcrumbs Start -->
-	<div class="pages-header bg-color-2">
+	<div class="pages-header bg-color-1">
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-xs-12">
