--- a/abouta.html
+++ b/abouta.html
@@ -64,7 +64,7 @@
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li class="dropdown"><a href="index.html">Home</a>
+                                        <li><a href="index.html">Home</a>
                                             
                                         </li>
                                         <!-- HOME END -->
