--- a/courthouse-towers.html
+++ b/courthouse-towers.html
@@ -68,7 +68,7 @@
                                             
                                         </li>
                                         <!-- HOME END -->
-                                        <li><a href="about-us.html">About</a>
+                                        <li><a href="https://roberthunt.com/abouta.html">About</a>
                                         </li>
                                         <!-- PORTFOLIO START -->
                                         
