--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="MiniPo is a Minimal Portfolio Template">
     <meta name="keywords" content="mininal , Personal portfolio template, Personal portfolio, Minimal personal, material design, portfolio, personal">
-    <meta name="author" content="regaltheme.com">
+    <meta name="author" content="roberthunt.com">
 
     <title>R M Hunt Fine Art</title>
 
