--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="MiniPo is a Minimal Portfolio Template">
-    <meta name="keywords" content="mininal , Personal portfolio template, Personal portfolio, Minimal personal, material design, portfolio, personal">
+    <meta name="description" content="R M Hunt Fine Art oil paintings of the American Landscape">
+    <meta name="keywords" content="fine art, paintings, landscapes, gallery, museum">
     <meta name="author" content="roberthunt.com">
 
     <title>R M Hunt Fine Art</title>
