--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -350,7 +350,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="left pull-left">
-                        <p>Copyright &copy; 2017 <a href="https://themeforest.net/user/regaltheme/portfolio" target="_blank">Regaltheme</a>.</p>
+                        <p>Copyright &copy; 2025 R M Hunt Fine Art.</p>
                     </div>
                     <div class="social-icon simple pull-right">
 						<ul class="clearfix">
